# guide-ai

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md
code-examples/: pyproject.toml  requirements-dev.txt  requirements.txt
code-examples/00-prerequisites/async_programming/: 01_asyncio_basics.py  02_async_context.py  03_aiohttp_client.py
code-examples/00-prerequisites/error_handling/: 01_custom_exceptions.py  02_context_managers.py
code-examples/00-prerequisites/milestone_project/: csv_processor.py  fastapi_service.py
code-examples/00-prerequisites/numpy_basics/: 01_array_operations.py  02_broadcasting.py
code-examples/00-prerequisites/pandas_basics/: 01_dataframe_ops.py  02_data_analysis.py
code-examples/00-prerequisites/type_annotations/: 01_typing_basics.py  02_pydantic_models.py
code-examples/01-ml-basics/deep_learning/: 01_neural_network.py  02_cnn_mnist.py  03_rnn_lstm.py  04_transformer_basics.py
code-examples/01-ml-basics/evaluation/: 01_cross_validation.py  02_hyperparameter_tuning.py  03_metrics.py
code-examples/01-ml-basics/milestone_projects/mnist_api/: serve.py  train.py
code-examples/01-ml-basics/milestone_projects/spam_classifier/: main.py
code-examples/01-ml-basics/supervised_learning/: 01_linear_regression.py  02_logistic_regression.py  03_decision_tree.py  04_random_forest.py  05_svm_knn.py
code-examples/01-ml-basics/unsupervised_learning/: 01_kmeans.py  02_pca.py
code-examples/02-llm/deployment/: 01_vllm_serve.py  02_ollama_api.py  03_gguf_convert.py
code-examples/02-llm/finetuning/: 01_lora_example.py  02_qlora_example.py  03_data_preparation.py  04_unsloth_finetune.py
code-examples/02-llm/milestone_projects/domain_finetune/: deploy.py  train.py
code-examples/02-llm/milestone_projects/model_comparison/: benchmark.py
code-examples/02-llm/tokenizer/: 01_bpe_basics.py  02_hf_tokenizers.py
code-examples/02-llm/transformer/: 01_attention_mechanism.py  02_position_encoding.py  03_transformer_impl.py
code-examples/03-ai-apps/agent/: 01_function_calling.py  02_tool_use.py  03_react_pattern.py  04_multi_agent.py  05_agent_memory.py
code-examples/03-ai-apps/evaluation/: 01_langsmith_trace.py  02_ragas_eval.py  03_deepeval.py
code-examples/03-ai-apps/frameworks/: 01_langchain_basics.py  02_langgraph_workflow.py  03_llamaindex_basics.py
code-examples/03-ai-apps/prompt_engineering/: 01_advanced_prompts.py  02_chain_of_thought.py  03_few_shot.py
code-examples/03-ai-apps/rag/: 01_document_loading.py  02_text_splitting.py  03_embedding.py  04_vector_store.py  05_retrieval.py  06_rerank.py  07_rag_optimization.py
code-examples/04-cv/diffusion/: 01_diffusers_basics.py  02_stable_diffusion.py  03_controlnet.py
code-examples/04-cv/multimodal/: 01_llava.py  02_vision_language.py
code-examples/04-cv/opencv/: 01_image_basics.py  02_image_processing.py  03_video_processing.py
code-examples/04-cv/yolo/: 01_detection.py  02_custom_training.py  03_model_export.py
code-examples/05-ai-engineering/data_engineering/: 01_data_labeling.py  02_data_cleaning.py  03_synthetic_data.py
code-examples/05-ai-engineering/gpu_optimization/: 01_mixed_precision.py  02_gradient_checkpoint.py  03_deepspeed_config.py
code-examples/05-ai-engineering/mlops/: 01_mlflow_tracking.py  02_wandb_experiment.py  03_model_registry.py
code-examples/05-ai-engineering/monitoring/: 01_prometheus_metrics.py  02_alerting.py
code-examples/05-ai-engineering/serving/: 01_vllm_config.py  02_fastapi_gateway.py  03_load_balancer.py
code-examples/06-ai-frontier/mcp/: 01_mcp_server.py  02_mcp_client.py
code-examples/06-ai-frontier/security/: 01_prompt_injection.py  02_red_teaming.py  03_bias_detection.py
docker/: docker-compose.llm.yml  (+4 more)
(+199 files in other folders)
