[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "guide-ai-examples"
version = "0.1.0"
description = "AI 从入门到实战知识库 — Python 代码示例集"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "guide-ai contributors"}
]

dependencies = [
    # ── 模块 0：前提准备 ──
    "numpy>=1.26",
    "pandas>=2.1",
    "aiohttp>=3.9",
    "pydantic>=2.5",
    "fastapi>=0.109",
    "uvicorn>=0.27",

    # ── 模块 1：ML 基础 ──
    "scikit-learn>=1.4",
    "torch>=2.1",
    "torchvision>=0.16",
    "matplotlib>=3.8",
    "optuna>=3.5",

    # ── 模块 2：大语言模型 LLM ──
    "transformers>=4.37",
    "peft>=0.8",
    "bitsandbytes>=0.42",
    "tokenizers>=0.15",
    "ollama>=0.1",

    # ── 模块 3：AI 应用开发 ──
    "langchain>=0.1",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "llama-index>=0.10",
    "chromadb>=0.4",
    "ragas>=0.1",

    # ── 模块 4：计算机视觉 ──
    "opencv-python>=4.9",
    "ultralytics>=8.1",
    "diffusers>=0.25",
    "accelerate>=0.26",

    # ── 模块 5：AI 工程化 ──
    "mlflow>=2.10",
    "wandb>=0.16",
    "prometheus-client>=0.20",
    "deepspeed>=0.13",

    # ── 模块 6：AI 前沿 ──
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.92",
    "ruff>=0.2",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = [
    "N999",   # 模块名用数字编号排序，教学项目有意为之
    "N806",   # ML 惯例：X, X_train 等变量名
    "N803",   # ML/数学惯例：Q, K, V 等参数名
    "N802",   # 模拟外部库 API 需保持原命名（如 OpenCV 的 cvtColor）
    "N812",   # PyTorch 惯例：import torch.nn.functional as F
    "F841",   # 教学代码中演示赋值结果，未必使用
    "F541",   # print 语句中使用 f-string 保持一致性
    "E501",   # 中文教学内容行长度不适合 120 字符限制
    "E741",   # 列表推导中 l 等短变量名可接受
]

[tool.pytest.ini_options]
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
